<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MythTV LeanBack Frontend</string>
    <string name="browse_title">MythTV LeanBack Frontend</string>
    <string name="related_movies">Related Videos</string>
    <string name="popular_header">Popular Videos</string>
    <string name="personal_settings">Settings</string>
    <string name="play_1">Play</string>
    <string name="play_2">From Start</string>
    <string name="play_livetv_1">Play</string>
    <string name="play_livetv_2">Live TV</string>
    <string name="resume_bkmrk_1">Play from</string>
    <string name="resume_bkmrk_2">Bookmark</string>
    <string name="resume_last_1">Play from Last</string>
    <string name="resume_last_2">Play Position</string>
    <string name="play_other_1">Play From</string>
    <string name="play_other_2">Other...</string>
    <string name="delete_1">Delete</string>
    <string name="delete_2">Recording</string>
    <string name="undelete_1">UnDelete</string>
    <string name="undelete_2">Recording</string>
    <string name="search_results">Search results for \'%1$s\'</string>
    <string name="no_search_results">No search results found for \'%1$s\'</string>
    <string name="search_label">MythTV</string>
    <string name="search_hint">Search for videos and recordings</string>
    <string name="settings_description">MythTV Search Settings</string>
    <string name="search_result_videos">Recording and Video Results for \'%1$s\'</string>
    <string name="search_result_no_videos">No Recording and Video Results found for \'%1$s\'</string>
    <string name="search_result_progs">Program Guide Results for \'%1$s\'</string>
    <string name="search_result_progs_500">First 500 Program Guide Results for \'%1$s\'</string>
    <string name="search_result_no_progs">No Program Guide Results found for \'%1$s\'</string>
    <string name="mobile_welcome_title">Welcome to MythTV leanfront</string>
    <string name="mobile_welcome_description">
        MythTV leanfront is designed for Android TV. Touch screen control is not optimal.
        To proceed, tap the banner below.
    </string>
    <string name="pref_title_settings">MythTV Settings</string>
    <string name="pref_title_backend_ip">IP Address or DNS name</string>
    <string name="pref_title_backend">MythTV Backend</string>
    <string name="pref_title_myth_port">MythTV Backend Port</string>
    <string name="pref_title_http_port">Status Port</string>
    <string name="pref_bookmark_mythtv">If Unchecked, Store in MythTV</string>
    <string name="pref_bookmark_local">Store Last Play Position in Android</string>
    <string name="pref_title_skip_fwd">Skip Forward Seconds</string>
    <string name="pref_title_playback">Playback: %1$s</string>
    <string name="pref_title_skip_back">Skip Back Seconds</string>
    <string name="pref_title_jump">Jump Back/Forward Minutes</string>
    <string name="pref_title_subtitle_size">Subtitle Size as Percentage of Default</string>
    <string name="pref_error_toast">Show playback error toast</string>
    <string name="pref_error_toast_desc">Message when there is a temporary playback error.</string>
    <string name="pref_title_lists">Program List Options</string>
    <string name="pref_seq_orig_airdate">Sort By Original Air Date</string>
    <string name="pref_seq_orig_airdate_desc">When Unchecked Sort By Recorded Date</string>
    <string name="pref_seq_rec_time">Date/Time Recorded</string>
    <string name="pref_seq_descending">Sort Descending</string>
    <string name="pref_seq_descending_desc">When Unchecked Sort Ascending.</string>
    <string name="pref_sort_order">Sort Sequence</string>
    <string name="pref_show_recents">Show Recently Viewed List</string>
    <string name="pref_show_recents_desc">This appears on the top level screen only.</string>
    <string name="pref_recents_days">Number of Days in Recently Viewed List</string>
    <string name="pref_recents_deleted">Include Deleted Recordings in Recent List</string>
    <string name="pref_recents_deleted_desc">Recordings that have been marked "Deleted" but not yet physically removed yet</string>
    <string name="pref_recents_watched">Include Watched Shows in Recent List</string>
    <string name="pref_recents_watched_desc">Recordings or Videos completely watched to the end or marked as "Watched" with the menu</string>
    <string name="pref_recents_trim">Trim Recently Viewed List</string>
    <string name="pref_recents_trim_desc">Include only one Watched or Deleted episode for each series or directory</string>
    <string name="pref_related_deleted">Include Deleted Shows in Related Videos List</string>
    <string name="pref_related_deleted_desc">To see the list press down in video
        details or playback controls.</string>
    <string name="pref_related_watched">Include Watched Shows in Related Videos List</string>
    <string name="pref_related_watched_desc">To see the list press down in video
        details or playback controls.</string>
    <string name="pref_title_backend_mac">Wakeup MAC Address</string>
    <string name="pref_ff_title">Audio Decode</string>
    <string name="pref_audio_auto">Auto select</string>
    <string name="pref_audio_auto_desc">Use Mediacodec where possible, otherwise use FFmpeg.</string>
    <string name="pref_audio_mediacodec">Mediacodec</string>
    <string name="pref_audio_mediacodec_desc">Many types of audio, plays surround sound if set up in
        Android settings.</string>
    <string name="pref_audio_ffmpeg">FFmpeg</string>
    <string name="pref_audio_ffmpeg_desc">Most types of audio, surround sound plays as stereo.</string>
    <string name="pref_title_idle_timeout">Playback idle timeout in minutes</string>
    <string name="pref_title_framerate_match">Match original frame rate</string>
    <string name="pref_letterbox_black">Letterbox Black Matte</string>
    <string name="pref_letterbox_black_desc">If unchecked use Gray Matte</string>
    <string name="pref_msg_needs_6_0">Requires at least Android 6.0</string>
    <string name="pref_tweaks_title">Advanced</string>
    <string name="pref_tweaks_desc">Please read the documentation before changing TS Search Packets.</string>
    <string name="pref_tweak_ts_search_pkts">TS Search Packets (default 2600)</string>
    <string name="pref_livetv_rowsize">Number of Live TV channels per row (default 100)</string>
    <string name="pref_video_parental">Maximum Parental level for video list (default 4)</string>
    <string name="pref_audio_pause">Audio Pause to Synchronize</string>
    <string name="pref_audio_pause_desc">
        Enable if playback sometimes starts with audio out of sync.
        This will cause a brief audio pause.
    </string>
    <string name="pref_autoplay">Autoplay</string>
    <string name="pref_autoplay_desc">At the end of playback automatically start the next video or episode.</string>
    <string name="pref_captions">Caption number to enable</string>
    <string name="pref_speed">Playback speed as percentage (10-800). Default 100.</string>
    <string name="pref_audio_sync">Audio Sync Adjustment in milliseconds</string>
    <string name="pref_commskip_adj_title">Adjustments to Start and End Position</string>
    <string name="pref_commskip_adj_desc">The numbers below can be set negative or positive to start or end skips early or late.</string>
    <string name="pref_commskip_start">Start Position Adjustment (seconds)</string>
    <string name="pref_commskip_end">End Position Adjustment (seconds)</string>
    <string name="pref_merge_videos">Merge Videos with Recordings</string>
    <string name="pref_merge_videos_desc">Recording lists will include episodes of the series from Videos.</string>
    <string name="pref_arrows">Customize Arrow Keys for Playback</string>
    <string name="pref_updown_controls">Up/Down Keys: Show Playback Controls</string>
    <string name="pref_updown_jump">Up/Down Keys: Jump Back / Forward</string>
    <string name="pref_updown_skipcom">Up/Down Keys: Skip Commercial</string>
    <string name="pref_leftright_rewff">Left/Right Keys: Skip Back / Forward</string>
    <string name="pref_leftright_jump">Left/Right Keys: Jump Back / Forward</string>
    <string name="pref_leftright_skipcom">Left/Right Keys: Skip Commercial</string>
    <string name="pref_rewff">Customize Rewind and Fast Forward Keys</string>
    <string name="pref_rewff_rewff">Rew/FF Keys: Skip Back / Forward</string>
    <string name="pref_rewff_jump">Rew/FF Keys: Jump Back / Forward</string>
    <string name="pref_rewff_skipcom">Rew/FF Keys: Skip Commercial</string>
    <string name="pref_max_vids">Maximum Recordings/Videos to load</string>
    <string name="pref_refresh_mins">Number of minutes between backend refreshes</string>
    <string name="msg_no_connection">Error: No Connection to MythTV Backend.</string>
    <string name="msg_no_delayshutdown">Warning: Unable to prevent backend idle shutdown.</string>
    <string name="all_title">All</string>
    <string name="recents_title">Recently Viewed</string>
    <string name="lb_playback_controls_fast_forward">Jump Fwd</string>
    <string name="playback_zoom_size">Size</string>
    <string name="playback_aspect_stretch">Stretch</string>
    <string name="video_minutes">minutes</string>
    <string name="video_filename">File Name</string>
    <string name="video_filesize">File Size</string>
    <string name="video_url">Video URL</string>
    <string name="video_props">Video Properties</string>
    <string name="button_other_1">Other</string>
    <string name="button_other_2">Actions</string>
    <string name="menu_undelete">Undelete</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_rerecord">Delete and Allow Rerecord</string>
    <string name="menu_rerecord">Allow Rerecord</string>
    <string name="menu_mark_unwatched">Mark as Unwatched</string>
    <string name="menu_mark_watched">Mark as Watched</string>
    <string name="menu_remove_bookmark">Remove Bookmark</string>
    <string name="menu_remove_lastplaypos">Remove Last Play Position</string>
    <string name="menu_stop_recording">Stop Recording</string>
    <string name="menu_view_description">View Description</string>
    <string name="menu_dont_stop_recording">Don\'t Stop Recording</string>
    <string name="menu_stop_livetv">Stop Live TV</string>
    <string name="menu_dont_stop_livetv">Don\'t Stop Live TV</string>
    <string name="menu_remove_from_recent">Remove from Recently Viewed List</string>
    <string name="menu_update_recgrp">Update Recording Group</string>
    <string name="dummy_empty_string" translatable="false"></string>
    <string name="msg_wake_backend">No backend connection, sent wake-up message.</string>
    <string name="msg_subtitle_on">Subtitle %1$s enabled.</string>
    <string name="msg_subtitle_notsupp">Error: Subtitle type %1$s is not supported.</string>
    <string name="msg_subtitle_cc">Closed Caption</string>
    <string name="msg_audio_track">Audio Track %1$s enabled.</string>
    <string name="msg_no_audio_track">No Audio Track.</string>
    <string name="msg_audio_track_off">Audio Track Disabled.</string>
    <string name="msg_subtitle_off">Subtitle Disabled.</string>
    <string name="msg_pic_pos">Picture Position:</string>
    <string name="msg_pin_center">Center</string>
    <string name="msg_pin_top">Top</string>
    <string name="msg_pin_bottom">Bottom</string>
    <string name="msg_pin_up">Up</string>
    <string name="msg_pin_down">Down</string>
    <string name="msg_pin_left_edge">Left Edge</string>
    <string name="msg_pin_right_edge">Right Edge</string>
    <string name="msg_pin_left">Left</string>
    <string name="msg_pin_right">Right</string>
    <string name="guide_jump_to_channel">Jump to Channel Number Below</string>
    <string name="guide_channel_num">Channel Number</string>
    <string name="guide_play_livetv">Play Live TV</string>
</resources>